--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "v8-wamr",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Implement bingding for v8 and wamr with napi",
+  "main": "tests/index.js",
   "scripts": {
     "clean": "rm -rf build",
-    "config": "cmake -S. -Bbuild -GNinja",
-    "build": "ninja -C build addon",
+    "build": "cmake-js compile",
     "start": "node tests/index.js"
   },
   "author": "Zzzode",
@@ -14,5 +13,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/Zzzode/v8-wamr.git"
+  },
+  "dependencies": {
+    "cmake-js": "^7.2.1"
   }
 }
